<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/selector_light_theme"
            android:title="@string/yenile"/>
    <item
            android:id="@+id/menu_share"
            android:icon="@drawable/selector_light_theme"
            android:title="@string/paylas"/>

    <item
            android:id="@+id/menu_copylink"
            android:icon="@drawable/selector_light_theme"

            android:title="@string/kopyala"/>


    <item
            android:id="@+id/menu_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search_black_24dp"
            app:showAsAction="always"/>

</menu>