<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".HakkindaActivity">

    <include layout="@layout/toolbar" android:id="@+id/include"/>

    <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp" app:srcCompat="@drawable/info_header"
            android:alpha="0.7"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/hakkinda_baslik"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textView9" app:layout_constraintEnd_toEndOf="@+id/textView9"/>
    <TextView
            android:text="@string/hakkinda_konu_baslik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/hakkinda_baslik" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textView9" app:layout_constraintEnd_toEndOf="@+id/textView9"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/hakkinda_baslik" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.2">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/hakkinda_icerik"
                    android:id="@+id/hakkinda_icerik"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
            />
        </LinearLayout>
    </ScrollView>
    <TextView
            android:text="@string/hakkinda"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/include" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2" android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>