<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".İletisimActivity">

    <include layout="@layout/toolbar" android:id="@+id/include"/>

    <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp" app:srcCompat="@drawable/contact"
            android:alpha="0.7"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/iletisim_baslik"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textView9" app:layout_constraintEnd_toEndOf="@+id/textView9"/>
    <TextView
            android:text="@string/iletisim_konu_baslik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/iletisim_baslik" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/textView9" app:layout_constraintEnd_toEndOf="@+id/textView9"/>
    <TextView
            android:text="@string/iletisim_icerik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/iletisim_icerik" app:layout_constraintTop_toBottomOf="@+id/iletisim_baslik"
            android:layout_marginTop="32dp" android:layout_marginLeft="64dp" android:layout_marginStart="64dp"
            android:layout_marginRight="64dp" android:layout_marginEnd="64dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/phone"
            android:id="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/iletisim_icerik" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.10"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
    />
    <TextView
            android:text="@string/ara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3" android:layout_marginTop="16dp"/>
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/envelope"
            android:id="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/iletisim_icerik" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.096" app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/e_posta_gonder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintEnd_toEndOf="@+id/imageView4"
            android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/iletisim"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/include" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView2" android:layout_marginTop="16dp"/>
    <androidx.constraintlayout.widget.Group android:layout_width="0dp" android:layout_height="0dp"
                                            android:id="@+id/ara_group"
                                            app:layout_constraintEnd_toEndOf="@+id/imageView3"
                                            app:layout_constraintBottom_toBottomOf="@+id/textView7"
                                            app:layout_constraintTop_toTopOf="@+id/imageView3"
                                            app:layout_constraintStart_toStartOf="@+id/imageView3"
                                            android:layout_marginTop="8dp"
                                            android:layout_marginBottom="8dp"/>
    <androidx.constraintlayout.widget.Group android:layout_width="0dp" android:layout_height="0dp"
                                            android:id="@+id/mail_group"
                                            app:layout_constraintBottom_toBottomOf="@+id/textView8"
                                            app:layout_constraintEnd_toEndOf="@+id/textView8"
                                            app:layout_constraintTop_toTopOf="@+id/imageView4"
                                            app:layout_constraintStart_toStartOf="@+id/textView8"/>
</androidx.constraintlayout.widget.ConstraintLayout>